[package]
name = "string-cases"
version = "0.1.0"
edition = "2021"
description = "String case conversion utilities"
license = "MIT"
repository = "https://github.com/kaleidawave/string-cases"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./lib.rs"

[dependencies]
